# jiangqiuyue

./: .gitignore  HELLO.md  README.md  ai_connect.md  architecture.md  launcher.py  start-agent.ps1
backend/: main.py  requirements.txt
backend-rust/: Cargo.toml
backend-rust/backend-core/: Cargo.toml
backend-rust/backend-core/src/: agent.rs  cli_executor.rs  cli_generator.rs  cli_guide.rs  cli_hub.rs  cli_tools.rs  config.rs  desktop_control.rs  doc_reader.rs  docker_sandbox.rs  file_tools.rs  lib.rs  memory.rs  retry.rs  screen.rs  software_scanner.rs
backend-rust/backend-core/src/llm/: mod.rs  provider.rs  types.rs
backend-rust/backend-core/src/trajectory/: recorder.rs
backend-rust/backend-server/: Cargo.toml
backend-rust/backend-server/src/: main.rs
backend-rust/download-model/: download_model.py
backend/core/: agent.py  cli_executor.py  config.py  doc_reader.py  file_tools.py  memory.py  screen.py  software_scanner.py
electron/: main.js  package.json  preload.js  preload_float.js
electron/scripts/: build-rust.js  copy-frontend.js  download-model.js
frontend/: package.json  vite.config.js
frontend/float_window/: character.js  index.html  sprite.js  style.css
frontend/main_window/: app.js  index.html  style.css
frontend/scripts/: copy-static.js
resources/character/: README.md
resources/character/click/: placeholder.txt
resources/character/happy/: placeholder.txt
resources/character/idle/: placeholder.txt
trajectories/: trajectory_20260629_231130_9f22511f.jsonl  trajectory_20260629_231453_cdde6cf6.jsonl
(+2 files in other folders)
