[package]
name = "backend-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for DeepSeek API)
reqwest = { version = "0.12", features = ["json"] }

# Vector memory
fastembed = "4"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Screen capture
xcap = "0.4"

# Image processing
image = "0.25"
base64 = "0.22"

# Windows registry scanning
winreg = "0.52"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Glob/Path utilities
glob = "0.3"
walkdir = "2"

# Regex
regex = "1"