[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

[dependencies]
backend-core = { path = "../backend-core" }

# HTTP framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"